--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,18 +25,12 @@ html {
   scroll-behavior: smooth;
 }
 
-body,
-button,
-input,
-select,
-textarea {
+body, button, input, select, textarea {
   color: $text;
   font-family: $fonts;
 }
 
-pre,
-code,
-pre tt {
+pre, code, pre tt {
   font-family: $code-fonts;
 }
 
@@ -115,8 +109,7 @@ table {
   width: 100%;
   max-width: 100%;
 
-  th,
-  td {
+  th, td {
     padding: 1.5%;
     border: 1px solid;
   }
@@ -153,8 +146,7 @@ table {
   display: none;
 }
 
-// Code copy buttons
-//
+// Code copy buttons //
 
 .highlight {
     position: relative;
@@ -324,8 +316,7 @@ table {
   }
 }
 
-// Spotlight
-//
+// Spotlight //
 #spotlight {
   display: flex;
   min-height: 100vh;
@@ -442,8 +433,7 @@ p.img-404 {
   }
 }
 
-// list.html
-//
+// list.html //
 .posts-group {
   display: flex;
   margin-bottom: 1.9em;
@@ -486,8 +476,7 @@ p.img-404 {
   }
 }
 
-// single.html
-//
+// single.html //
 .bg-img {
   width: 100vw;
   height: 100vh;
@@ -538,13 +527,13 @@ hr.post-end {
   text-justify: inter-ideograph; //For IE/Edge
   {{- end }}
 
-  @include aTag;
-
-  figure {
-    max-width: 100%;
-    height: auto;
-    margin: 0;
-    text-align: center;
+  @include aTag; 
+    
+    figure {
+      max-width: 100%;
+      height: auto;
+      margin: 0;
+      text-align: center;
 
     p {
       font-size: .8em;
