--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -745,6 +745,53 @@ a.footnote-ref {
   }
 }
 
+//custom
+
+.card {
+  background-color: $dark-grey;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  // border: 1px solid white;
+  align-items: flex-end;
+}
+
+.card-avatar {
+  width: 70px;
+  height: 70px;
+  margin-right: 1rem;
+}
+
+.card-info {
+  // width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  // border: 1px solid white;
+  align-content: flex-end;
+}
+
+.card h2 {
+  // align-self: flex-start;
+  margin: 0;
+  // border: 1px solid white;
+}
+
+.card-info ul {
+  margin: 0;
+  list-style: none;
+  // border: 1px solid white;
+  display: flex;
+  padding: 0;
+}
+
+.card-info li {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  margin-right: 1rem;
+}
 
 // Media Queries
 //
