--- a/layouts/partials/tweetbutton.html
+++ b/layouts/partials/tweetbutton.html
@@ -1,7 +1,8 @@
 <a
   display="inline"
   class="twitter-share-button"
-  href="https://twitter.com/intent/tweet?text=Hello%20world"
+  href="https://twitter.com/intent/tweet"
+  data-size="large"
 >
   Tweet</a
 >
