--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -24,7 +24,8 @@
 			</header>
 			<div class="content">
 				{{ .Content | replaceRE "(<h[1-6] id=\"([^\"]+)\".+)(</h[1-6]+>)" `${1}<a href="#${2}" class="anchor" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg></a>${3}` | safeHTML }}
-				<a href="https://twitter.com/S1D3WYZ" target="_blank"><img src="/images/s1d3s.jpg" alt="s1d3wyz" width="75" height="75"></a>
+				<a href="https://twitter.com/S1D3WYZ" target="_blank"><img src="/images/s1d3s.jpg" alt="s1d3wyz on twitter" width="75" height="75"></a>
+				{{- partial "tweetbutton.html" . -}}
 			</div>
 			{{- if .Site.Params.relatedPosts }}
 			{{- partial "related-posts.html" . -}}
