--- a/layouts/partials/tweetbutton.html
+++ b/layouts/partials/tweetbutton.html
@@ -1,7 +1,7 @@
 <a
   display="inline"
   class="twitter-share-button"
-  href="https://twitter.com/intent/tweet"
+  href="https://twitter.com/intent/tweet?text={{- .Title -}}"
   data-size="large"
 >
   Tweet</a
